# ship-trajectory-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
data/: README.md
data/simulated/: example_simulated_trajectory.csv
examples/: README.md  bernoulli.py  cmdstan_check.py  plot_simulated_trajectory.py  verify_cmdstan_installation.py
experiments/data_exploration/: explore_ship_data.py
experiments/model_comparison/: compare_models.py
experiments/trajectory_data/: explore_ship_data.py
experiments/trajectory_prediction/: compare_models.py  fit_constant_radius.py  fit_constant_turn_rate.py  fit_constant_turn_rate_acceleration.py  fit_time_varying_motion.py  fit_time_varying_radius.py
notebooks/: explore_ship_data.ipynb
src/examples/: bernoulli.py  interactive_trajectory_simulator.py  simulate_trajectory.py  test_cmdstan.py  trajectory_models.py
src/ship_trajectory_prediction/: __init__.py  coordinates.py  paths.py
src/simulation/: __init__.py  interactive_ship_gui.py  run_gui.py  run_ship_gui.py  run_simulation_gui.py  ship_simulator.py  simulation_io.py
src/trajectory/: __init__.py  plot_ship_data.py  read_ship_data.py
stan/examples/: bernoulli.stan  test_cmdstan.stan
stan/models/: constant_radius.stan  constant_turn_rate.stan  constant_turn_rate_acceleration.stan  time_varying_motion.stan  time_varying_radius.stan
tests/: test_paths.py
tests/evaluation/: test_metrics.py  test_plotting.py  test_reporting.py
tests/models/: test_constant_radius.py  test_evaluation.py  (+3 more)
(+54 files in other folders)
