[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ship-trajectory-prediction"
version = "0.1.0"
description = "Master thesis project on Bayesian methods for probabilistic ship trajectory prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.23,<0.24",
    "cmdstanpy>=1.3,<1.4",
    "matplotlib>=3.10,<3.11",
    "numpy>=2.2,<3",
    "pandas>=2.3,<3",
]

[project.scripts]
ship-simulator = "ship_trajectory_prediction.simulation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ship_trajectory_prediction*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
